force-app/main/default/objects/Work_Order__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <type>Lookup</type>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Device being serviced</description>
</CustomField>