force-app/main/default/objects/Work_Order__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
    <description>When service was completed</description>
</CustomField>