force-app/main/default/objects/Work_Order__c/fields/Parts_Required__c.field-meta.xml
<CustomField>
    <fullName>Parts_Required__c</fullName>
    <label>Parts Required</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <description>Parts needed for the service visit</description>
</CustomField>