force-app/main/default/objects/Work_Order__c/fields/Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Notes__c</fullName>
    <label>Service Notes</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Technician notes from the visit</description>
</CustomField>