force-app/main/default/objects/Work_Order__c/fields/Technician_Name__c.field-meta.xml
<CustomField>
    <fullName>Technician_Name__c</fullName>
    <label>Technician Name</label>
    <type>Text</type>
    <length>100</length>
    <description>Assigned field technician</description>
</CustomField>